--- a/WebContent/wechat/mycard.html
+++ b/WebContent/wechat/mycard.html
@@ -123,7 +123,8 @@
     		}); */
 	}
     function nextpage(value){
-    	
+    	window.localStorage.setItem('mycourseid',value);
+		window.location.href = "coachcourse.html";
     }
     </script>
   </body>
